--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,2 @@
-homedir/.vim/bundle/*
-!homedir/.vim/bundle/.gitignore
-!homedir/.vim/bundle/Vundle.vim
+homedir/.vim/plugged/*
+!homedir/.vim/plugged/.gitignore
