--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,6 +1,6 @@
-font_family      MesloLGS NF
-italic_font      auto
-bold_font        auto
-bold_italic_font auto
+font_family      Meslo LG L for Powerline
+italic_font      Meslo LG L for Powerline Italic
+bold_font        Meslo LG L for Powerline Bold
+bold_italic_font Meslo LG L for Powerline Bold Italic
 
 font_size        14.0
