add Nord theme for Kitty

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,3 +1,5 @@
+include nord.conf
+
 font_family      Meslo LG L for Powerline
 italic_font      Meslo LG L for Powerline Italic
 bold_font        Meslo LG L for Powerline Bold
