--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,4 +1,5 @@
 include nord.conf
+include kitty_custom.conf
 
 font_family      Meslo LG L for Powerline
 italic_font      Meslo LG L for Powerline Italic
