--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "nord-prompt"]
 	path = nord-prompt
 	url = git://github.com/rokasmuningis/nord-prompt.git
+[submodule "homedir/.vim/pack/YouCompleteMe"]
+	path = homedir/.vim/pack/YouCompleteMe
+	url = git://github.com/ycm-core/YouCompleteMe
