feat: new colors

--- a/config/kitty/gruv.conf
+++ b/config/kitty/gruv.conf
@@ -1,38 +1,16 @@
-#: Color scheme {{{
-
-foreground #ebdbb2
-background #282828
-
-#: black
-color0 #282828
-color8 #928374
-
-#: red
-color1 #cc241d
-color9 #fb4934
-
-#: green
-color2  #98971a
-color10 #b8bb26
-
-#: yellow
-color3  #d79921
-color11 #fabd2f
-
-#: blue
-color4  #458588
-color12 #83a598
-
-#: magenta
-color5  #b16286
-color13 #d3869b
-
-#: cyan
-color6  #689d6a
-color14 #8ec07c
-
-#: white
-color7  #a89984
-color15 #ebdbb2
-
-#: }}}
+color0 #000000
+color1 #f6188f
+color2 #1ebb2b
+color3 #fdf834
+color4 #2186ec
+color5 #f85a21
+color6 #12c3e2
+color7 #ffffff
+color8 #000000
+color9 #f841a0
+color10 #25c141
+color11 #fdf454
+color12 #2f9ded
+color13 #f97137
+color14 #19cde6
+color15 #ffffff
